# simple-db

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  rough-notes.md
.github/workflows/: build.yml  ci.yml
benchmarks/: README.md  benchmark.cpp  benchmark_results.md  example_benchmark.cpp  results.md
include/simpledb/: catalog.h  command.h  config.h  executor.h  history.h  parser.h  planner.h  query_runner.h  result.h  serializer.h  stringutils.h
include/simpledb/ast/: ast.h
include/simpledb/execution/: filter_operator.h  operator.h  projection_operator.h  row.h  table_scan_operator.h
include/simpledb/storage/: page.h  table_heap.h
include/simpledb/utils/: logging.h  stringutils.h
learnings/: build-process.md  cpp-namespaces.md  database-architectures.md  function-parameter-patterns.md  header-files.md  move-semantics.md  one-definition-rule.md  page-based-storage.md  preprocessor.md  unique_ptr.md  volcano-model.md
src/: catalog.cpp  config.cpp  executor.cpp  history.cpp  main.cpp  parser.cpp  planner.cpp  query_runner.cpp  result.cpp  serializer.cpp  stringutils.cpp
src/execution/: filter_operator.cpp  projection_operator.cpp  table_scan_operator.cpp
src/parser/: ast_builder_visitor.cpp  ast_builder_visitor.h
src/parser/antlr/: SimpleDB.g4
src/storage/: page.cpp  table_heap.cpp
src/utils/: stringutils.cpp
tests/: README.md  catalog_test.cpp  executor_test.cpp  page_test.cpp  parser_test.cpp  select_integration_test.cpp
tests/execution/: filter_operator_test.cpp  projection_operator_test.cpp  table_scan_operator_test.cpp
tests/storage/: table_heap_iterator_test.cpp  table_heap_test.cpp
